syntax = "proto3";

package user;

option go_package = "./v1";

message GetUserResponse {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string role = 5;
};

message GetUserRequest {};

message NewUserRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string password = 4;
  string role = 5;
};
message NewUserResponse {
  string id = 1;
};

message GetAllUsersRequest {};



service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {};
  rpc GetAllUsers(GetAllUsersRequest) returns (stream GetUserResponse) {};
  rpc CreateUser(NewUserRequest) returns (NewUserResponse) {};
}